Rewrite and reorganise the code (again) and implement the clear_all functionality

--- a/src/main/resources/assets/hdskins/lang/en_us.json
+++ b/src/main/resources/assets/hdskins/lang/en_us.json
@@ -33,8 +33,8 @@
   "hdskins.local": "Preview",
   "hdskins.server": "Current Skin",
   "hdskins.arm_style": "Arm Shape: %s",
-  "hdskins.mode.steve": "Steve Model",
-  "hdskins.mode.alex": "Alex Model",
+  "hdskins.arm_style.steve": "Steve Model",
+  "hdskins.arm_style.alex": "Alex Model",
   "hdskins.skin_type": "Skin Type: %s",
   "skin_type.minecraft.skin": "Body",
   "skin_type.minecraft.cape": "Cape",
