--- a/src/main/resources/assets/hdskins/lang/de_de.json
+++ b/src/main/resources/assets/hdskins/lang/de_de.json
@@ -30,8 +30,8 @@
   "hdskins.local": "Lokaler Skin",
   "hdskins.server": "Server Skin",
   "hdskins.arm_style": "Form der Arme: %s",
-  "hdskins.mode.steve": "Steve Model",
-  "hdskins.mode.alex": "Alex Model",
+  "hdskins.arm_style.steve": "Steve Model",
+  "hdskins.arm_style.alex": "Alex Model",
   "hdskins.skin_type": "Skin Typ: %s",
   "skin_type.minecraft.skin": "Spieler",
   "skin_type.minecraft.cape": "Umhang",
