--- a/src/main/resources/assets/hdskins/lang/zh_cn.json
+++ b/src/main/resources/assets/hdskins/lang/zh_cn.json
@@ -1,7 +1,7 @@
 {
   "hdskins.choose": "选择一个文件",
   "hdskins.manager": "皮肤管理器",
-  "hdskins.error.unreadable": "无法读取文件",
+  "hdskins.error.unreadable": "无法读取该文件",
   "hdskins.error.ext": "该文件不是PNG格式",
   "hdskins.error.open": "打开皮肤文件失败",
   "hdskins.error.invalid.too_large": "文件需要小于1024像素长度",
@@ -13,35 +13,47 @@
   "hdskins.error.mojang.wait": "请等待 %d 分钟",
   "hdskins.error.noserver": "没有可用的皮肤服务器",
   "hdskins.error.offline": "- 服务器离线 -",
-  "hdskins.open.title": "选择你的皮肤",
+  "hdskins.error.session": "无效的会话： 请尝试重启Minecraft",
+  "hdskins.error.session.short": "无效的会话",
+  "hdskins.status.busy": "处理中...",
+  "hdskins.open.title": "选择皮肤",
   "hdskins.directory.up": "返回上一目录",
   "hdskins.directory.go": "->",
   "hdskins.directory.save": "保存",
   "hdskins.filetype.directory": "目录",
   "hdskins.filetype.file": "%s 文件",
   "hdskins.filetype.unknown": "文件",
-  "hdskins.save.title": "选择另存为地址",
+  "hdskins.save.title": "选择保存位置",
+  "hdskins.save.overwrite": "覆写文件？",
+  "hdskins.save.readonly": "我们没法向该文件夹写入，你愿意将其保存到游戏目录下吗？",
+  "hdskins.save.completed": "文件已保存，你要现在打开吗？",
   "hdskins.fetch": "抓取皮肤中...",
   "hdskins.failed": "上传皮肤失败",
   "hdskins.request": "正在发送请求到服务器 请稍等...",
   "hdskins.upload": "上传皮肤中 请稍等...",
-  "hdskins.local": "本地皮肤",
-  "hdskins.server": "服务器皮肤",
-  "hdskins.mode.steve": "Steve 模型",
-  "hdskins.mode.alex": "Alex 模型",
-  "skin_type.minecraft.skin": "玩家贴图",
+  "hdskins.local": "预览",
+  "hdskins.server": "目前的皮肤",
+  "hdskins.arm_style": "手臂形状：%s",
+  "hdskins.arm_style.default": "Steve型",
+  "hdskins.arm_style.slim": "Alex型",
+  "hdskins.skin_type": "皮肤类型：%s",
+  "skin_type.minecraft.skin": "身体贴图",
   "skin_type.minecraft.cape": "披风贴图",
   "skin_type.minecraft.elytra": "鞘翅贴图",
+  "skin_type.hdskins.unknown": "未知（%s）",
+  "hdskins.mode": "姿势：%s",
   "hdskins.mode.stand": "站立",
   "hdskins.mode.sleep": "睡觉",
   "hdskins.mode.ride": "骑乘",
   "hdskins.mode.swim": "游泳",
-  "hdskins.equipment": "装备: %s",
+  "hdskins.mode.riptide": "使用激流",
+  "hdskins.equipment": "装备：%s",
   "hdskins.equipment.empty": "无",
   "hdskins.equipment.leather": "皮革护甲",
   "hdskins.equipment.iron": "铁护甲",
   "hdskins.equipment.gold": "金护甲",
   "hdskins.equipment.diamond": "钻石护甲",
+  "hdskins.equipment.netherite": "下界合金护甲",
   "hdskins.equipment.turtle": "海龟壳",
   "hdskins.options.chevy": ">>",
   "hdskins.options.chevy.title": "上传皮肤",
@@ -49,9 +61,10 @@
   "hdskins.options.download.title": "保存皮肤",
   "hdskins.options.close": "关闭",
   "hdskins.options.clear": "清除",
+  "hdskins.options.clear_all": "清除所有",
   "hdskins.options.browse": "浏览",
-  "hdskins.options.skindrops": "实验性皮肤",
+  "hdskins.options.skindrops": "实验性皮肤脱落",
   "hdskins.options.cache": "清除皮肤缓存",
-  "hdskins.warning.experimental": "§6警告！: 这个选项是 §4实验性§6的, 这意味着他可能会造成损坏或崩溃. 开启它意味着你能承担它所带来的任何后果.",
-  "hdskins.warning.disabled.description": "§4(！禁用！)\n§7当前皮肤不是由你目前的皮肤服务器提供.\n§7选择一个不同的皮肤来开始."
+  "hdskins.warning.experimental": "§6警告！: 这个选项是 §4实验性§6的, 这意味着它可能会造成损坏或崩溃。开启它意味着你能承担它所带来的任何后果。",
+  "hdskins.warning.disabled.description": "§4（！禁用！）\n§7你目前的皮肤服务器不支持该特性。\n§7请选择一个不同的皮肤来开始。"
 }
